# xfce4-windowck-plugin

./: Dockerfile
common/: Makefile.am
debian/: control
themes/windowck-dark/unity/: Makefile.am
themes/windowck-dark/xfwm4/: Makefile.am
themes/windowck/unity/: Makefile.am
themes/windowck/xfwm4/: Makefile.am
